# cross_section_protobuf

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  Makefile  protobuf_test.cpp
cpp/inc/proto/: material_protobuf.pb.cc  material_protobuf.pb.h
cpp/src/: main.cpp
lib/kaist/: uo2_33
lib/kaist/serialized/: ba.material  ba_uo2.material  baffle.material  control_rod.material  guide_tube.material  mox_43.material  mox_70.material  mox_87.material  reflector.material  uo2_20.material  uo2_33.material
lib/kaist/xml/: ba.xml  ba_uo2.xml  baffle.xml  control_rod.xml  guide_tube.xml  mox_43.xml  mox_70.xml  mox_87.xml  reflector.xml  uo2_20.xml  uo2_33.xml
proto/: material.proto  material_protobuf.proto
python/: C5G7 Moderator.ipynb  C5G7 Mox.ipynb  Makefile  Material Protocol Buffer Usage.ipynb  TG Fake Cross-sections.ipynb  XML Conversion.ipynb  XML_To_Material.py  ascii_to_serialized.py  benchmark_problem_3A.ipynb  kaist_benchmark_problem_3a.ipynb  new_material.ipynb  tg_nda_fake_cross_sections.ipynb
python/proto/: material_protobuf_pb2.py
